fix contrast pagemanger

--- a/style.css
+++ b/style.css
@@ -40,6 +40,20 @@ body,
     color:#000;
 }
 
+
+#pageManager .navbar-nav .nav-link.active, #pageManager .navbar-nav .show > .nav-link {
+  color: #000;
+}
+
+#pageManager .navbar-nav .nav-link:hover {
+  color: #000;
+  text-decoration: underline;
+}
+
+#pageManager .navbar-nav .nav-link:focus{
+  color: #000
+}
+
 /* Table */
 
 .table > :not(:first-child) {
